--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,37 +13,53 @@ body {
   flex-direction: column;
 }
 
-.navbar{
+.navbar {
   background: #024731;
-  width: 1440px;
   height: 114px;
   flex-shrink: 0;
 }
 
-.logobar{
+/* For navbar items */
+.logobar {
   width: 280px;
-height: 80px;
-flex-shrink: 0;
-background: #F5BD89;
-color: #090909;
+  height: 80px;
+  flex-shrink: 0;
+  background: #f5bd89;
+  color: #090909;
 
-text-align: center;
-font-family: Inter;
-font-size: 32px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
-display: flex;
-justify-content: center; /* centers horizontally */
-align-items: center;     /* centers vertically */
+  text-align: center;
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  display: flex;
+  justify-content: center; /* centers horizontally */
+  align-items: center; /* centers vertically */
 }
 
-.navbaritems{
-  color: #FFF;
-
+/* For navbar items */
+.navbaritems {
+  color: #fff;
   font-family: Inter;
   font-size: 32px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
 }
+
+a.navbaritems {
+  color: #fff;
+}
+#login-dropdown {
+  color: #fff;
+}
+/* #add-stuff-nav{
+  color: #FFF;
+}
+#list-stuff-nav{
+  color: #FFF;
+}
+#admin-stuff-nav{
+  color: #FFF;
+} */
