--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,3 +63,38 @@ a.navbaritems {
 #admin-stuff-nav{
   color: #FFF;
 } */
+
+.headerGlobalNotes{
+  color: #024731;
+
+font-family: Inter;
+font-size: 48px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+justify-content: center;
+align-items: center;
+}
+
+.tanbox{
+  color: #EAC3A0;
+  width: 1198px;
+  height: 70px;
+}
+
+.note{
+  background: #D9D9D9;
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+gap: 20px;
+max-width: 50%;
+padding: 20px;
+border-radius: 10px;
+color: #000;
+
+font-family: Inter;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
