--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,13 +88,22 @@ display: grid;
 grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 gap: 20px;
 max-width: 50%;
-padding: 20px;
+padding: 40px;
 border-radius: 10px;
 color: #000;
-
+margin: 20px;
 font-family: Inter;
 font-size: 16px;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
+}
+
+.filterbox{
+  color: #FFF3E2;
+}
+
+.dropbox{
+  background: #FFF3E2;
+  color: #024731
 }
