adding more to globals

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -149,3 +149,21 @@ line-height: normal;
   display: flex;
   flex-direction: column;
 }
+
+.landing-image {
+  width: 80%;
+  margin-bottom: 2rem;
+}
+
+.landing-buttons {
+  display: flex;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
