--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,9 +27,9 @@ body {
   background: #5AA68E;
   border-radius: 20px;
   color: white;
-  font-size: 36px;
-  font-family: 'Inter', sans-serif;
-  font-weight: 600;
+  font-size: 26px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
   padding: 1rem 2rem;
   text-align: center;
   text-decoration: none;
@@ -61,6 +61,16 @@ body {
   justify-content: center;
 }
 
+.landing-text {
+  font-family: 'Poppins', sans-serif;
+  font-size: 34px;
+  font-weight: 600;
+  color: #024731;;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -68,12 +78,12 @@ a {
 
 .navbar {
   background: #024731;
-  height: 114px;
+  height: 80px;
   flex-shrink: 0;
 }
 
 /* For navbar items */
-.logobar {
+/* .logobar {
   width: 280px;
   height: 80px;
   flex-shrink: 0;
@@ -81,31 +91,54 @@ a {
   color: #090909;
 
   text-align: center;
-  font-family: Inter;
-  font-size: 32px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 22px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
   display: flex;
-  justify-content: center; /* centers horizontally */
-  align-items: center; /* centers vertically */
+  justify-content: center; 
+  align-items: center; 
+} */
+
+.logobar {
+  width: 280px;
+  height: 80px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.logobar-img {
+  height: 60px;
+  object-fit: contain;
+}
+
 
 /* For navbar items */
 .navbaritems {
-  color: #fff;
-  font-family: Inter;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 600;
+  color: #FFF3E2;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-style: light;
+  font-weight: 500;
   line-height: normal;
+  text-decoration: underline;
 }
 
 a.navbaritems {
-  color: #fff;
+  color: #FFF3E2;
+  text-decoration: inherit;
 }
 #login-dropdown {
-  color: #fff;
+  color: #FFF3E2;
+}
+
+.navbaritems:hover,
+a.navbaritems:hover,
+#login-dropdown:hover {
+  color: #5AA68E;
 }
 
 /* For View notes*/
